--- a/arch/arm/boot/dts/100ask_imx6ull-14x14.dts
+++ b/arch/arm/boot/dts/100ask_imx6ull-14x14.dts
@@ -907,7 +907,7 @@
     pinctrl-0 = <&pinctrl_ecspi1>;
     
     fsl,spi-num-chipselects = <2>;
-    cs-gpio = <&gpio4 26 GPIO_ACTIVE_LOW>, <&gpio4 24 GPIO_ACTIVE_LOW>;
+    cs-gpios = <&gpio4 26 GPIO_ACTIVE_LOW>, <&gpio4 24 GPIO_ACTIVE_LOW>;
     status = "okay";
     /*   
     spidev0: spi@0 {
